# robocopy-tasker

./: .gitignore  README.md  icon-showcase.html  index.html  package-lock.json  package.json
.obsidian/: workspace.json
docs/: requirements.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  history.rs  lib.rs  log_parser.rs  main.rs  models.rs  process.rs  validation.rs
src/components/layout/: app-shell.tsx
src/components/log-entries/: log-entries-table.tsx
src/components/run-history/: history-view.tsx  run-detail-row.tsx
src/components/settings/: settings-view.tsx
src/components/task-editor/: command-preview.tsx  option-checkbox.tsx  option-list.tsx  option-string.tsx  option-value.tsx  task-editor.tsx
src/components/task-list/: recent-runs.tsx  task-detail.tsx  task-sidebar.tsx
src/hooks/: use-config.ts  use-running-tasks.ts  use-runs.ts
src/lib/: commands.ts  events.ts  exit-codes.ts  format.ts  robocopy-conflicts.ts  types.ts
