[package]
name = "backup-gene"
version = "0.4.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "backup_gene_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
